temp ok for service init

--- a/extension/home.html
+++ b/extension/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dessage Onboarding</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
 <div class="welcome-container view" id="view-welcome" style="display: block;">
@@ -31,8 +31,8 @@
             <div class="welcome-checkbox">
                 <input type="checkbox" id="welcome-agree">
                 <label for="welcome-agree">I agree to Dessage's <a
-                            href="https://github.com/ninjahome/dessage-plugin/blob/main/user_terms.md" target="_blank">Terms
-                        of use</a></label>
+                        href="https://github.com/ninjahome/dessage-plugin/blob/main/user_terms.md" target="_blank">Terms
+                    of use</a></label>
             </div>
             <button type="button" id="welcome-create" class="primary-button" disabled>Create a new wallet</button>
             <button type="button" id="welcome-import" class="secondary-button">Import an existing wallet</button>
@@ -66,9 +66,9 @@
             <div class="password-checkbox">
                 <input type="checkbox" id="password-agree">
                 <label for="password-agree">I understand that Dessage cannot recover this password for me. <a
-                            href="https://github.com/ninjahome/dessage-plugin/blob/main/user_terms.md"
-                            class="learn-more">Learn
-                        more</a></label>
+                        href="https://github.com/ninjahome/dessage-plugin/blob/main/user_terms.md"
+                        class="learn-more">Learn
+                    more</a></label>
             </div>
             <button type="button" class="primary-button" disabled>Create a new wallet</button>
         </form>
@@ -97,7 +97,7 @@
             </ul>
         </div>
         <div class="recovery-phrase-item" id="recovery-phrase-item-template" style="display: none"><span
-                    class="phrase-item-index">1</span>. <span class="phrase-item-value"></span></div>
+                class="phrase-item-index">1</span>. <span class="phrase-item-value"></span></div>
         <div class="recovery-phrase-container hidden-seed-phrase" data-visibile="false">
         </div>
         <div class="actions">
@@ -212,7 +212,7 @@
             <div class="password-checkbox">
                 <input type="checkbox" id="imported-password-agree">
                 <label for="imported-password-agree">I understand that Dessage cannot recover this password for me. <a
-                            href="#" class="learn-more">Learn more</a></label>
+                        href="#" class="learn-more">Learn more</a></label>
             </div>
             <button type="button" class="primary-button" disabled>Import my wallet</button>
         </form>
