--- a/extension/main.html
+++ b/extension/main.html
@@ -3,7 +3,7 @@
 <head>
     <title>Simple Menu</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://ajax.googleapis.com;">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <div class="login-container view" id="view-unlock-plugin">
@@ -88,9 +88,9 @@
             <span class="btc-area-tittle">BTC Area</span>
             <br>
             <select id="btc-network-switch" class="btc-network-switch">
-               <option value="1" class="btc-network-item" id="btc-network-item-main">main</option>
-               <option value="2" class="btc-network-item" id="btc-network-item-test">test</option>
-           </select>
+                <option value="1" class="btc-network-item" id="btc-network-item-main">main</option>
+                <option value="2" class="btc-network-item" id="btc-network-item-test">test</option>
+            </select>
 
             <div class="btc-address">
                 <span class="btc-address-val"></span>
