--- a/extension/home.html
+++ b/extension/home.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
-<div class="welcome-container view" id="view-welcome" style="display: block;">
-    <header>
+<div style="height: 23%; width: 100%; z-index: -100; background-color: #5ba7fc; position: fixed; top: 0; left: 0">
+    <header style="width: 652px; margin: 0 auto; display: flex; align-items: center;justify-content: flex-start;padding-top: 24px">
         <img src="file/logo_128.png" alt="Dessage Logo" class="logo">
+        <h1 style="color: white">Dessage protocol</h1>
     </header>
+</div>
+<div class="welcome-container view" id="view-welcome" style="display: block;">
     <main>
-        <h1>Let's get started</h1>
-        <p>Trusted by millions, Dessage is a secure wallet making the world of web3 accessible to all.</p>
         <div class="welcome-carousel">
             <!-- Carousel items (for demonstration, static content) -->
             <div class="carousel-item active">
@@ -22,11 +23,16 @@
             <div class="carousel-item">
                 <img src="file/router.png" alt="Slide 2">
             </div>
+            <div class="carousel-item">
+                <img src="file/token-node.png" alt="Slide 2">
+            </div>
         </div>
         <div class="carousel-indicators">
             <span class="indicator active"></span>
             <span class="indicator"></span>
         </div>
+        <h1>Let's get started</h1>
+        <p>Trusted by millions, Dessage is a secure wallet making the world of web3 accessible to all.</p>
         <form>
             <div class="welcome-checkbox">
                 <input type="checkbox" id="welcome-agree">
@@ -41,9 +47,6 @@
 </div>
 
 <div id="view-create-password" class="create-container view" style="display:none;">
-    <header>
-        <h1>Dessage protocol</h1>
-    </header>
     <main>
         <div class="progress-bar">
             <div class="step active">1</div>
@@ -54,13 +57,24 @@
         <p>This password will unlock your Dessage wallet only on this device. Dessage cannot recover this password.</p>
         <form>
             <div class="password-container">
-                <label for="new-password">New password <br> (8 characters min)</label>
-                <input type="password" id="new-password" required minlength="8">
-                <span class="show-password">Show</span>
+                <label for="new-password">
+                    <h2>New password</h2>
+                    <span>8 characters min</span>
+                </label>
+                <div class="input-wrapper">
+                    <input type="password" id="new-password" required minlength="8" placeholder="********">
+                    <span class="show-password">Show</span>
+                </div>
+
             </div>
             <div class="password-container">
-                <label for="confirm-password">Confirm password</label>
-                <input type="password" id="confirm-password" required>
+                <label for="confirm-password">
+                    <h2>Confirm password</h2>
+                </label>
+                <div class="input-wrapper">
+                    <input type="password" id="confirm-password" required placeholder="********">
+                    <button type="button" class="toggle-visibility" onclick="togglePasswordVisibility('confirm-password')">Show</button>
+                </div>
             </div>
             <div class="error-message" style="display:none;"></div>
             <div class="password-checkbox">
@@ -76,9 +90,6 @@
 </div>
 
 <div id="view-recovery-phrase" class="recovery-container view" style="display:none;">
-    <header>
-        <h1>Dessage protocol</h1>
-    </header>
     <main>
         <div class="progress-bar">
             <div class="step completed">1</div>
@@ -101,9 +112,9 @@
         <div class="recovery-phrase-container hidden-seed-phrase" data-visibile="false">
         </div>
         <div class="actions">
-            <button type="button" class="secondary-button" id="view-recovery-phrase-hide-seed">Reveal seed phrase
+            <button type="button" class="secondary-button secondary-buttonright" id="view-recovery-phrase-hide-seed">Reveal seed phrase
             </button>
-            <button type="button" class="secondary-button" id="view-recovery-phrase-copy-seed">Copy to clipboard
+            <button type="button" class="secondary-button secondary-buttonRight" id="view-recovery-phrase-copy-seed">Copy to clipboard
             </button>
         </div>
         <button type="button" class="primary-button">Next</button>
@@ -111,9 +122,6 @@
 </div>
 
 <div id="view-confirm-recovery" class="recovery-confirm-container view" style="display:none;">
-    <header>
-        <h1>Dessage protocol</h1>
-    </header>
     <main>
         <div class="progress-bar">
             <div class="step completed">1</div>
@@ -140,21 +148,19 @@
 </div>
 
 <div id="view-import-wallet" class="import-container view" style="display:none;">
-    <header>
-        <h1>Dessage protocol</h1>
-    </header>
+
     <main>
         <div class="progress-bar">
             <div class="step completed">1</div>
             <div class="step">2</div>
         </div>
         <h1>Access your wallet with your Secret Recovery Phrase</h1>
-        <p>Dessage cannot recover your password. We will use your Secret Recovery Phrase to validate your ownership,
+        <p style=" text-align: left; margin-bottom: 24px; padding: 16px; border: 2px solid #f3dfca; background-color: rgba(248, 219, 213, 0.5); border-radius: 5px; margin-top: 44px; color: rgba(29,32,39,0.7)">Dessage cannot recover your password. We will use your Secret Recovery Phrase to validate your ownership,
             restore your wallet and set up a new password. First, enter the Secret Recovery Phrase that you were given
             when you created your wallet. <a href="#" class="learn-more">Learn more</a></p>
 
         <div class="form-group">
-            <label for="recovery-phrase-length">Type your Secret Recovery Phrase</label>
+            <h2 for="recovery-phrase-length" style="margin-bottom: 16px">Type your Secret Recovery Phrase</h2>
             <select id="recovery-phrase-length">
                 <option value="12">I have a 12-word phrase</option>
                 <option value="15">I have a 15-word phrase</option>
@@ -188,9 +194,7 @@
 </div>
 
 <div id="view-password-for-imported" class="password-for-imported view" style="display: none;">
-    <header>
-        <h1>Dessage protocol</h1>
-    </header>
+
     <main>
         <div class="progress-bar">
             <div class="step completed">1</div>
@@ -200,13 +204,21 @@
         <p>This password will unlock your Dessage wallet only on this device. Dessage cannot recover this password.</p>
         <form>
             <div class="password-container">
-                <label for="imported-new-password">New password <br>(8 characters min)</label>
-                <input type="password" id="imported-new-password" required minlength="8">
-                <span class="show-password">Show</span>
+                <label for="new-password">
+                    <h2>New password</h2>
+                    <span>8 characters min</span>
+                </label>
+                <div class="input-wrapper">
+                    <input type="password" id="new-password" required minlength="8" placeholder="********">
+                    <span class="show-password">Show</span>
+                </div>
             </div>
             <div class="password-container">
-                <label for="imported-confirm-password">Confirm password</label>
-                <input type="password" id="imported-confirm-password" required>
+                <label for="imported-confirm-password"><h2>Confirm password</h2></label>
+                <div class="input-wrapper">
+                    <input type="password" id="new-password" required minlength="8" placeholder="********">
+                    <span class="show-password">Show</span>
+                </div>
             </div>
             <div class="error-message" style="display:none;"></div>
             <div class="password-checkbox">
@@ -216,10 +228,31 @@
             </div>
             <button type="button" class="primary-button" disabled>Import my wallet</button>
         </form>
-    </main>
+        </main>
 </div>
 
 <div id="view-account-home" class="account-home view" style="display:none;">
+    <main>
+        <h1>How to Pin a Browser Extension to the Toolbar</h1>
+        <uL>
+            <li>
+                <p>Click the extension icon at the top right corner of the browser to open the extensions menu.</p>
+                <img src="file/step01.png" alt="Open Extensions Menu">
+            </li>
+
+            <li>
+                <p>Locate the extension you want to pin to the toolbar in the extensions menu.</p>
+                <img src="file/step02.png" alt="Find the Extension">
+            </li>
+
+            <li>
+                <p>Click the pin icon next to the extension to pin it to the toolbar.</p>
+                <img src="file/step003.png" alt="Click the Pin Icon">
+            </li>
+        </uL>
+        <button type="button" class="primary-button" >Done!</button>
+    </main>
+
 </div>
 
 <script src="js/util.js"></script>
