--- a/extension/main.html
+++ b/extension/main.html
@@ -54,7 +54,10 @@
         </div>
         <div class="ninja-account-info accountInfo">
             <img src="file/qr.png">
-            <span>0x87A4387A487A4487A4...c8649</span>
+            <div class="tooltip">
+                <span class="ninja-address-val">0x87A4387A487A4487A4...c8649</span>
+                <span class="tooltiptext">Copy to Clipboard</span>
+            </div>
         </div>
 
         <div id="ninja-account-area" class="ninja-account-area">
@@ -109,9 +112,11 @@
                     </select>
                 </div>
                 <div class="eth-address account-address">
-                    <button class="eth-qr-btn">QR</button>
-                    <span class="eth-address-val"></span>
-                    <button class="eth-copy-btn">Copy</button>
+                    <img src="file/qr.png">
+                    <div class="tooltip">
+                        <span class="eth-address-val"></span>
+                        <span class="tooltiptext">Copy to Clipboard</span>
+                    </div>
                 </div>
             </div>
 
@@ -155,9 +160,11 @@
                     </select>
                 </div>
                 <div class="btc-address account-address">
-                    <button class="btc-qr-btn">QR</button>
-                    <span class="btc-address-val"></span>
-                    <button class="btc-copy-btn">Copy</button>
+                    <img src="file/qr.png">
+                    <div class="tooltip">
+                        <span class="btc-address-val"></span>
+                        <span class="tooltiptext">Copy to Clipboard</span>
+                    </div>
                 </div>
             </div>
 
@@ -194,7 +201,6 @@
                 </div>
             </div>
         </div>
-
         <div id="nostr-account-area" class="nostr-account-area" style="display: none">
             <div class="nostr-accountInfo">
             <div style="display: flex; justify-content: space-between; align-items: center">
@@ -210,8 +216,11 @@
             </select>
             </div>
             <div class="nostr-address account-address">
-                <img class="nostr-qr-btn" src="file/qr.png" alt=" ">
-                <span class="nostr-address-val"></span>
+                <img src="file/qr.png">
+                <div class="tooltip">
+                    <span class="nostr-address-val"></span>
+                    <span class="tooltiptext">Copy to Clipboard</span>
+                </div>
             </div>
             </div>
 
