--- a/extension/main.html
+++ b/extension/main.html
@@ -41,66 +41,65 @@
     </header>
     <div class="tab-container">
         <div class="tab active" data-target="ninja-account-area">Dessage</div>
-        <div class="tab" data-target="wallet-content-area">ETH</div>
+        <div class="tab" data-target="eth-account-area">ETH</div>
         <div class="tab" data-target="btc-account-area">BTC</div>
         <div class="tab" data-target="nostr-account-area">Nostr</div>
     </div>
 
-    <div id="ninja-account-switch-area" class="ninja-account-switch-area" style="display: block">
-        <div style="display: none">
-            <option value="" class="wallet-item" style="display: none" id="wallet-option-item"></option>
-            <select id="wallet-dropdown" class="wallet-dropdown">
-            </select>
-        </div>
-        <div class="ninja-account-info accountInfo">
-            <img src="file/qr.png">
-            <div class="tooltip">
-                <span class="ninja-address-val">0x87A4387A487A4487A4...c8649</span>
-                <span class="tooltiptext">Copy to Clipboard</span>
+    <div id="wallet-content-area" class="wallet-content-area">
+        <div id="ninja-account-area" class="ninja-account-area active">
+            <div class="ninja-account-switch-area">
+                <div style="display: none">
+                    <option value="" class="wallet-item" style="display: none" id="wallet-option-item"></option>
+                    <select id="wallet-dropdown" class="wallet-dropdown"></select>
+                </div>
+                <div class="ninja-account-info accountInfo">
+                    <img src="file/qr.png">
+                    <div class="tooltip">
+                        <span class="ninja-address-val">0x87A4387A487A4487A4...c8649</span>
+                        <span class="tooltiptext">Copy to Clipboard</span>
+                    </div>
+                </div>
+                <div class="dessage-token-infos">
+                    <span class="dessage-token-val balance">0.00</span> <span class="dessage-token-unit balance-unit">DSG</span>
+                </div>
+                <div class="dessage-token-operation btnAll">
+                    <div class="align-center">
+                        <button class="dessage-token-op-buy-sell functionbtn">
+                            <img src="file/buysell.png">
+                        </button>
+                        <span>Buy/Sell</span>
+                    </div>
+                    <div class="align-center">
+                        <button class="dessage-token-op-buy-send functionbtn">
+                            <img src="file/send.png">
+                        </button>
+                        <span>Send</span>
+                    </div>
+                    <div class="align-center">
+                        <button class="dessage-token-op-buy-swap functionbtn">
+                            <img src="file/swap.png">
+                        </button>
+                        <span>Swap</span>
+                    </div>
+                    <div class="align-center">
+                        <button class="dessage-token-op-buy-chat functionbtn">
+                            <img src="file/chat.png">
+                        </button>
+                        <span>Chat</span>
+                    </div>
+                    <div class="align-center">
+                        <button class="dessage-token-op-buy-chat functionbtn">
+                            <img src="file/tweets.png">
+                        </button>
+                        <span>Tweets</span>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div id="ninja-account-area" class="ninja-account-area">
-            <div class="dessage-token-infos">
-                <span class="dessage-token-val balance">0.00</span> <span class="dessage-token-unit balance-unit">DSG</span>
-            </div>
-            <div class="dessage-token-operation btnAll">
-                <div class="align-center">
-                    <button class="dessage-token-op-buy-sell functionbtn">
-                        <img src="file/buysell.png">
-                    </button>
-                    <span>Buy/Sell</span>
-                </div>
-                <div class="align-center">
-                    <button class="dessage-token-op-buy-send functionbtn">
-                        <img src="file/send.png">
-                    </button>
-                    <span>Send</span>
-                </div>
-                <div class="align-center">
-                    <button class="dessage-token-op-buy-swap functionbtn">
-                        <img src="file/swap.png">
-                    </button>
-                    <span>Swap</span>
-                </div>
-                <div class="align-center">
-                    <button class="dessage-token-op-buy-chat functionbtn">
-                        <img src="file/chat.png">
-                    </button>
-                    <span>Chat</span>
-                </div>
-                <div class="align-center">
-                    <button class="dessage-token-op-buy-chat functionbtn">
-                        <img src="file/tweets.png">
-                    </button>
-                    <span>Tweets</span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="wallet-content-area" class="wallet-content-area">
-        <div id="eth-account-area" class="eth-account-area" style="display: none">
-            <div class="eth-accountInfo ">
+        <div id="eth-account-area" class="eth-account-area">
+            <div class="eth-accountInfo">
                 <div style="display: flex; justify-content: space-between; align-items: center">
                     <span class="eth-area-tittle">Ethereum Area</span>
                     <select id="eth-network-switch" class="eth-network-switch">
@@ -119,7 +118,6 @@
                     </div>
                 </div>
             </div>
-
             <ul class="eth-balance-info balanceInfo">
                 <li>
                     <span class="eth-token-val balance">0.00</span> <span class="eth-token-unit balance-unit">ETH</span>
@@ -148,9 +146,9 @@
                     <span>More</span>
                 </div>
             </div>
-
         </div>
-        <div id="btc-account-area" class="btc-account-area" style="display: none">
+
+        <div id="btc-account-area" class="btc-account-area">
             <div class="btc-accountInfo">
                 <div style="display: flex; justify-content: space-between; align-items: center">
                     <span class="btc-area-tittle">BTC Area</span>
@@ -167,13 +165,11 @@
                     </div>
                 </div>
             </div>
-
             <div class="btc-balance-info balanceInfo">
                 <span class="btc-token-val balance">0.00</span> <span class="btc-token-unit">BTC</span>
                 <br>
                 <span class="btc-token-to-usdt balanceUsd">0.00</span> <span class="btc-token-to-usdt-unit balance-unit">USD</span>
             </div>
-
             <div class="btc-operation btnAll">
                 <div class="align-center">
                     <button class="btc-operation-send functionbtn">
@@ -201,29 +197,29 @@
                 </div>
             </div>
         </div>
-        <div id="nostr-account-area" class="nostr-account-area" style="display: none">
+
+        <div id="nostr-account-area" class="nostr-account-area">
             <div class="nostr-accountInfo">
-            <div style="display: flex; justify-content: space-between; align-items: center">
-            <span class="nostr-area-tittle">Nostr Area</span>
-            <select id="nostr-relay-switch" class="nostr-relay-switch">
-                <option value="wss://lightningrelay.com" class="nostr-relay-item">wss://lightningrelay.com</option>
-                <option value="wss://at.nostrworks.com" class="nostr-relay-item">wss://at.nostrworks.com</option>
-                <option value="wss://btc.klendazu.com" class="nostr-relay-item">wss://btc.klendazu.com</option>
-                <option value="wss://relay.damus.io" class="nostr-relay-item">wss://relay.damus.io</option>
-                <option value="wss://bitcoiner.social" class="nostr-relay-item">wss://bitcoiner.social</option>
-                <option value="wss://cache2.primal.net/v1" class="nostr-relay-item">wss://cache2.primal.net/v1</option>
-                <option value="wss://relay.nostr.nu" class="nostr-relay-item">wss://relay.nostr.nu</option>
-            </select>
-            </div>
-            <div class="nostr-address account-address">
-                <img src="file/qr.png">
-                <div class="tooltip">
-                    <span class="nostr-address-val"></span>
-                    <span class="tooltiptext">Copy to Clipboard</span>
+                <div style="display: flex; justify-content: space-between; align-items: center">
+                    <span class="nostr-area-tittle">Nostr Area</span>
+                    <select id="nostr-relay-switch" class="nostr-relay-switch">
+                        <option value="wss://lightningrelay.com" class="nostr-relay-item">wss://lightningrelay.com</option>
+                        <option value="wss://at.nostrworks.com" class="nostr-relay-item">wss://at.nostrworks.com</option>
+                        <option value="wss://btc.klendazu.com" class="nostr-relay-item">wss://btc.klendazu.com</option>
+                        <option value="wss://relay.damus.io" class="nostr-relay-item">wss://relay.damus.io</option>
+                        <option value="wss://bitcoiner.social" class="nostr-relay-item">wss://bitcoiner.social</option>
+                        <option value="wss://cache2.primal.net/v1" class="nostr-relay-item">wss://cache2.primal.net/v1</option>
+                        <option value="wss://relay.nostr.nu" class="nostr-relay-item">wss://relay.nostr.nu</option>
+                    </select>
+                </div>
+                <div class="nostr-address account-address">
+                    <img src="file/qr.png">
+                    <div class="tooltip">
+                        <span class="nostr-address-val"></span>
+                        <span class="tooltiptext">Copy to Clipboard</span>
+                    </div>
                 </div>
             </div>
-            </div>
-
             <div class="nostr-operation btnAll">
                 <div class="align-center">
                     <button class="nostr-op-show-private-password functionbtn">
@@ -237,12 +233,11 @@
                     </button>
                     <span>More</span>
                 </div>
-
             </div>
-
         </div>
     </div>
     <div id="ninja-operation-area" class="ninja-operation-area"></div>
+
 </div>
 <script src="js/main.js"></script>
 
