--- a/extension/home.html
+++ b/extension/home.html
@@ -207,14 +207,14 @@
                     <span>8 characters min</span>
                 </label>
                 <div class="input-wrapper">
-                    <input type="password" id="new-password" required minlength="8" placeholder="********">
+                    <input type="password" id="imported-new-password" required minlength="8" placeholder="********">
                     <span class="show-password">Show</span>
                 </div>
             </div>
             <div class="password-container">
                 <label for="imported-confirm-password"><h2>Confirm password</h2></label>
                 <div class="input-wrapper">
-                    <input type="password" id="new-password" required minlength="8" placeholder="********">
+                    <input type="password" id="imported-confirm-password" required minlength="8" placeholder="********">
                     <span class="show-password">Show</span>
                 </div>
             </div>
@@ -248,13 +248,10 @@
                 <img src="file/step003.png" alt="Click the Pin Icon">
             </li>
         </uL>
-        <button type="button" class="primary-button" >Done!</button>
+<!--        <button type="button" class="primary-button" >Done!</button>-->
     </main>
 </div>
 
-<script src="js/util.js"></script>
-<script src="js/database.js"></script>
-<script src="js/wallet.js"></script>
 <script src="js/home.js"></script>
 </body>
 </html>
