--- a/extension/main.html
+++ b/extension/main.html
@@ -54,11 +54,13 @@
                     <select id="wallet-dropdown" class="wallet-dropdown"></select>
                 </div>
                 <div class="ninja-account-info accountInfo">
-                    <img src="file/qr.png">
                     <div class="tooltip">
-                        <span class="ninja-address-val">0x87A4387A487A4487A4...c8649</span>
+                        <span class="ninja-address-val">0x87A4387A487A4487A487A48...c8649</span>
                         <span class="tooltiptext">Copy to Clipboard</span>
                     </div>
+                    <button class="qr-btn">
+                        <img src="file/qr.png" alt="QR Image Test">
+                    </button>
                 </div>
                 <div class="dessage-token-infos">
                     <span class="dessage-token-val balance">0.00</span> <span class="dessage-token-unit balance-unit">DSG</span>
@@ -111,11 +113,13 @@
                     </select>
                 </div>
                 <div class="eth-address account-address">
-                    <img src="file/qr.png">
                     <div class="tooltip">
                         <span class="eth-address-val"></span>
                         <span class="tooltiptext">Copy to Clipboard</span>
                     </div>
+                    <button class="qr-btn">
+                        <img src="file/qr.png" alt="QR Image Test">
+                    </button>
                 </div>
             </div>
             <ul class="eth-balance-info balanceInfo">
@@ -158,11 +162,13 @@
                     </select>
                 </div>
                 <div class="btc-address account-address">
-                    <img src="file/qr.png">
                     <div class="tooltip">
                         <span class="btc-address-val"></span>
                         <span class="tooltiptext">Copy to Clipboard</span>
                     </div>
+                    <button class="qr-btn">
+                        <img src="file/qr.png" alt="QR Image Test">
+                    </button>
                 </div>
             </div>
             <div class="btc-balance-info balanceInfo">
@@ -213,11 +219,13 @@
                     </select>
                 </div>
                 <div class="nostr-address account-address">
-                    <img src="file/qr.png">
                     <div class="tooltip">
                         <span class="nostr-address-val"></span>
                         <span class="tooltiptext">Copy to Clipboard</span>
                     </div>
+                    <button class="qr-btn">
+                        <img src="file/qr.png" alt="QR Image Test">
+                    </button>
                 </div>
             </div>
             <div class="nostr-operation btnAll">
