--- a/extension/home.html
+++ b/extension/home.html
@@ -73,7 +73,7 @@
                 </label>
                 <div class="input-wrapper">
                     <input type="password" id="confirm-password" required placeholder="********">
-                    <button type="button" class="toggle-visibility" onclick="togglePasswordVisibility('confirm-password')">Show</button>
+                    <span class="show-password">Show</span>
                 </div>
             </div>
             <div class="error-message" style="display:none;"></div>
