--- a/extension/main.html
+++ b/extension/main.html
@@ -31,7 +31,7 @@
 <div id="view-dashboard" class="main-dashboard view">
     <header class="account-header">
         <div style="display: flex;justify-content: flex-start;align-items: center">
-            <img src="file/logo_128.png" style="width: 32px;height: 32px">
+            <img src="file/logo_128.png" style="width: 32px;height: 32px" alt="logo of dessage">
             <p style="margin: 0">Account 01 </p>
             <button class="dropdown-btn"> <svg class="dropdown-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     <path d="M7 10l5 5 5-5z"/>
