--- a/extension/main.html
+++ b/extension/main.html
@@ -40,7 +40,7 @@
             <div class="account-list-area" id="account-list-area" style="display: none">
                 <div>
                     <span class="account-list-header-title">Select an account</span>
-                    <span class="account-list-header-btn">Close</span>
+                    <button class="account-list-header-btn">Close</button>
                 </div>
                 <div>
                     <li class="account-detail-item" id="account-detail-item-template">
@@ -52,8 +52,8 @@
                     <ul class="account-list-content" id="account-list-content"></ul>
                 </div>
                 <div>
-                    <span class="account-list-new-account">Add New Account</span>
-                    <span class="account-list-import-account">Add New Account</span>
+                    <button class="account-list-new-account">Add New Account</button>
+                    <button class="account-list-import-account">Add New Account</button>
                 </div>
             </div>
 
@@ -77,7 +77,7 @@
             <div class="ninja-account-switch-area">
                 <div class="ninja-account-info accountInfo">
                     <div class="tooltip">
-                        <span class="ninja-address-val">0x87A4387A487A4487A487A48...c8649</span>
+                        <span class="ninja-address-val address-val">0x87A4387A487A4487A487A48...c8649</span>
                         <span class="tooltiptext">Copy to Clipboard</span>
                     </div>
                     <button class="qr-btn">
@@ -89,31 +89,31 @@
                 </div>
                 <div class="dessage-token-operation btnAll">
                     <div class="align-center">
-                        <button class="dessage-token-op-buy-sell functionbtn">
-                            <img src="file/buysell.png">
+                        <button class="dessage-token-op-buy-sell function-btn">
+                            <img src="file/buysell.png" alt="buy btn image">
                         </button>
                         <span>Buy/Sell</span>
                     </div>
                     <div class="align-center">
-                        <button class="dessage-token-op-buy-send functionbtn">
+                        <button class="dessage-token-op-buy-send function-btn">
                             <img src="file/send.png">
                         </button>
                         <span>Send</span>
                     </div>
                     <div class="align-center">
-                        <button class="dessage-token-op-buy-swap functionbtn">
+                        <button class="dessage-token-op-buy-swap function-btn">
                             <img src="file/swap.png">
                         </button>
                         <span>Swap</span>
                     </div>
                     <div class="align-center">
-                        <button class="dessage-token-op-buy-chat functionbtn">
+                        <button class="dessage-token-op-buy-chat function-btn">
                             <img src="file/chat.png">
                         </button>
                         <span>Chat</span>
                     </div>
                     <div class="align-center">
-                        <button class="dessage-token-op-buy-chat functionbtn">
+                        <button class="dessage-token-op-buy-chat function-btn">
                             <img src="file/tweets.png">
                         </button>
                         <span>Tweets</span>
@@ -157,19 +157,19 @@
             </ul>
             <div class="eth-operation btnAll">
                 <div class="align-center">
-                    <button class="eth-operation-send functionbtn">
+                    <button class="eth-operation-send function-btn">
                         <img src="file/send.png">
                     </button>
                     <span>Send</span>
                 </div>
                 <div class="align-center">
-                    <button class="eth-operation-erc20 functionbtn">
+                    <button class="eth-operation-erc20 function-btn">
                         <img src="file/erc.png">
                     </button>
                     <span>ERC 20</span>
                 </div>
                 <div class="align-center">
-                    <button class="eth-op-more functionbtn">
+                    <button class="eth-op-more function-btn">
                         <img src="file/more.png">
                     </button>
                     <span>More</span>
@@ -204,25 +204,25 @@
             </div>
             <div class="btc-operation btnAll">
                 <div class="align-center">
-                    <button class="btc-operation-send functionbtn">
+                    <button class="btc-operation-send function-btn">
                         <img src="file/send.png">
                     </button>
                     <span>Send</span>
                 </div>
                 <div class="align-center">
-                    <button class="eth-operation-receive functionbtn">
+                    <button class="eth-operation-receive function-btn">
                         <img src="file/buysell.png">
                     </button>
                     <span>Receive</span>
                 </div>
                 <div class="align-center">
-                    <button class="btc-operation-brc20 functionbtn">
+                    <button class="btc-operation-brc20 function-btn">
                         <img src="file/erc.png">
                     </button>
                     <span>BRC 20</span>
                 </div>
                 <div class="align-center">
-                    <button class="btc-operation-more functionbtn">
+                    <button class="btc-operation-more function-btn">
                         <img src="file/more.png">
                     </button>
                     <span>More</span>
@@ -259,13 +259,13 @@
             </div>
             <div class="nostr-operation btnAll">
                 <div class="align-center">
-                    <button class="nostr-op-show-private-password functionbtn">
+                    <button class="nostr-op-show-private-password function-btn">
                         <img src="file/key.png">
                     </button>
                     <span>Show Private Key</span>
                 </div>
                 <div class="align-center">
-                    <button class="nostr-op-more functionbtn">
+                    <button class="nostr-op-more function-btn">
                         <img src="file/more.png">
                     </button>
                     <span>More</span>
