--- a/extension/main.html
+++ b/extension/main.html
@@ -85,7 +85,8 @@
                     </button>
                 </div>
                 <div class="dessage-token-infos">
-                    <span class="dessage-token-val balance">0.00</span> <span class="dessage-token-unit balance-unit">DSG</span>
+                    <span class="dessage-token-val balance">0.00</span>
+                    <span class="dessage-token-unit balance-unit">DSG</span>
                 </div>
                 <div class="dessage-token-operation btnAll">
                     <div class="align-center">
@@ -138,7 +139,7 @@
                 </div>
                 <div class="eth-address account-address">
                     <div class="tooltip">
-                        <span class="eth-address-val"></span>
+                        <span class="eth-address-val address-val"></span>
                         <span class="tooltiptext">Copy to Clipboard</span>
                     </div>
                     <button class="qr-btn">
@@ -188,7 +189,7 @@
                 </div>
                 <div class="btc-address account-address">
                     <div class="tooltip">
-                        <span class="btc-address-val"></span>
+                        <span class="btc-address-val address-val"></span>
                         <span class="tooltiptext">Copy to Clipboard</span>
                     </div>
                     <button class="qr-btn">
@@ -249,7 +250,7 @@
                 </div>
                 <div class="nostr-address account-address">
                     <div class="tooltip">
-                        <span class="nostr-address-val"></span>
+                        <span class="nostr-address-val address-val"></span>
                         <span class="tooltiptext">Copy to Clipboard</span>
                     </div>
                     <button class="qr-btn">
