refactor main logic

--- a/extension/main.html
+++ b/extension/main.html
@@ -52,8 +52,8 @@
                     <ul class="account-list-content" id="account-list-content"></ul>
                 </div>
                 <div>
-                    <button class="account-list-new-account">Add New Account</button>
-                    <button class="account-list-import-account">Add New Account</button>
+                    <button class="account-list-new-account"><span id="btn-add-new-account-txt">Add New Account</span></button>
+                    <button class="account-list-import-account"><span id="btn-import-new-account-txt">Import Account</span></button>
                 </div>
             </div>
 
